--- a/i18n/post-thumbnail-editor.pot
+++ b/i18n/post-thumbnail-editor.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the Post Thumbnail Editor package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Post Thumbnail Editor 2.3.0-beta\n"
+"Project-Id-Version: Post Thumbnail Editor 2.3.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/post-thumbnail-editor\n"
-"POT-Creation-Date: 2013-12-26 19:29:18+00:00\n"
+"POT-Creation-Date: 2014-01-01 06:18:40+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -48,7 +48,7 @@ msgstr ""
 msgid "transparent/white"
 msgstr ""
 
-#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0-beta)  #-#-#-#-#
+#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: html/pte.php:42 php/options.php:72 post-thumbnail-editor.php:193
 #: post-thumbnail-editor.php:232 post-thumbnail-editor.php:344
@@ -163,6 +163,11 @@ msgstr ""
 
 #: html/pte.php:269
 msgid "Proposed"
+msgstr ""
+
+#: php/class-pte-image-editor-gd.php:66
+#: php/class-pte-image-editor-imagick.php:69
+msgid "Image crop failed."
 msgstr ""
 
 #: php/functions.php:230
@@ -287,9 +292,9 @@ msgstr ""
 msgid "Edit Thumbnails"
 msgstr ""
 
-#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0-beta)  #-#-#-#-#
+#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0)  #-#-#-#-#
 #. Plugin URI of the plugin/theme
-#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0-beta)  #-#-#-#-#
+#. #-#-#-#-#  post-thumbnail-editor.pot (Post Thumbnail Editor 2.3.0)  #-#-#-#-#
 #. Author URI of the plugin/theme
 msgid "http://sewpafly.github.io/post-thumbnail-editor/"
 msgstr ""
